# Snake-

./: .gitignore  CMakeLists.txt  Makefile  readme.md
include/Fonts/: NotoSans-Regular.h
include/Snake/: Food.hpp  Player.hpp  SnakeSegment.hpp
lib/: sfml-graphics-d.lib  sfml-graphics.lib  sfml-main.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-system-s.lib
lib/VC16-x64/: sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-system-s-d.lib  sfml-window-s.lib
src/: Food.cpp  Main.cpp  Player.cpp  SnakeSegment.cpp  main.cpp
