cmake_minimum_required(VERSION 3.10)
set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/scripts/buildsystems/vcpkg.cmake") # set this to your vcpkg cmake file
project(Snake VERSION 2.0.0)

file(GLOB SRC "src/*.cpp")

IF (WIN32)
    find_package(SFML 2.5.1 REQUIRED system window graphics main)
    add_executable(Snake WIN32 ${SRC})
    target_include_directories(Snake PRIVATE include/)
    target_link_libraries(Snake PRIVATE sfml-graphics)
    target_link_libraries(Snake PRIVATE sfml-window)
    target_link_libraries(Snake PRIVATE sfml-system)
    target_link_libraries(Snake PRIVATE sfml-main)
ELSE()
    find_package(SFML 2.5.1 REQUIRED system window graphics)
    add_executable(Snake ${SRC})
    target_include_directories(Snake PRIVATE include/)
    target_link_libraries(Snake PRIVATE sfml-graphics)
    target_link_libraries(Snake PRIVATE sfml-window)
    target_link_libraries(Snake PRIVATE sfml-system)
ENDIF()
